--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,8 @@ version: "3.8"
 services:
   takeover_scanner:
     build: .
+    ports:
+      - "2222:22"
     volumes:
       - ./domains.txt:/app/domains.txt
       - ./takeover_output:/app/takeover_output
